fix horizontal scroll

--- a/app/src/features/apiClient/screens/apiClient/components/sidebar/collectionsList/collectionsList.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/sidebar/collectionsList/collectionsList.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   overflow: auto;
+  overflow-x: hidden;
   padding: 8px 8px 8px 0;
   flex: auto;
 
@@ -77,6 +78,10 @@
           gap: 8px;
           color: var(--requestly-color-text-subtle);
 
+          &-text {
+            overflow: hidden;
+          }
+
           &:hover {
             background: var(--requestly-color-surface-1);
           }
@@ -93,10 +98,11 @@
           .collection-name-container {
             display: flex;
             align-items: center;
+            justify-content: space-between;
           }
 
           .collection-name {
-            max-width: 180px;
+            max-width: 70%;
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
@@ -109,7 +115,6 @@
 
           .collection-options {
             flex-shrink: 0;
-            margin-left: auto;
             visibility: hidden;
             display: flex;
             align-items: center;
